FIx modal style on small screen

--- a/src/public/styles/modal.css
+++ b/src/public/styles/modal.css
@@ -145,6 +145,10 @@ textarea {
 }
 
 @media only screen and (max-width: 425px) {
+  .modal {
+    padding-top: 20px;
+    z-index: 900;
+  }
   .modal-details-first-row {
     flex-direction: column-reverse;
   }
